# pacelang

./: CMakeLists.txt  README.md
pacelang/: CMakeLists.txt  Dialect.cpp  Dialect.h  Ops.td  main.cpp
